--- a/template.html
+++ b/template.html
@@ -47,19 +47,19 @@
       <tbody>
         {{range .}}
         <tr>
-          <td>{{ .id }}</td>
+          <td>{{ .NQData.id }}</td>
           <td>
             <a href="https://universalis.app/market/{{ .id }}">{{ .name }}</a>
           </td>
-          <td>{{ .nqworldname }}</td>
-          <td>{{ .nqdc }}</td>
-          <td>{{ .nqsalevelocity }}</td>
-          <td>{{ .nqprice }}</td>
-          <td>{{ .nqhomeprice }}</td>
-          <td>{{ .nqmargin }}</td>
-          <td>{{ .stacksize }}</td>
-          <td>{{ .totalmargin }}</td>
-          <td>{{ .timezone }}</td>
+          <td>{{ .NQData.nqworldname }}</td>
+          <td>{{ .NQData.nqdc }}</td>
+          <td>{{ .NQData.nqsalevelocity }}</td>
+          <td>{{ .NQData.nqprice }}</td>
+          <td>{{ .NQData.nqhomeprice }}</td>
+          <td>{{ .NQData.nqmargin }}</td>
+          <td>{{ .NQData.stacksize }}</td>
+          <td>{{ .NQData.totalmargin }}</td>
+          <td>{{ .NQData.timezone }}</td>
         </tr>
         {{end}}
       </tbody>
