--- a/template.html
+++ b/template.html
@@ -27,90 +27,91 @@
     </style>
   </head>
   <body>
+    {{ printf . }}
 
-    <h1>Normal Quality</h1>
-    {{ if .NQData}}
-    <table class="GeneratedTable">
-      <thead>
-        <tr>
-          <th>id</th>
-          <th>Name</th>
-          <th>World Name</th>
-          <th>Datacenter</th>
-          <th>Sale Velocity</th>
-          <th>Price</th>
-          <th>Home Price</th>
-          <th>Margin</th>
-          <th>Stack Size</th>
-          <th>Total Margin</th>
-          <th>Last Updated</th>
-        </tr>
-      </thead>
-      <tbody>
-        {{ range .NQData }}
-        <tr>
-          <td>{{ .id }}</td>
-          <td>
-            <a href="https://universalis.app/market/{{ .id }}">{{ .name }}</a>
-          </td>
-          <td>{{ .nqworldname }}</td>
-          <td>{{ .nqdc }}</td>
-          <td>{{ .nqsalevelocity }}</td>
-          <td>{{ .nqprice }}</td>
-          <td>{{ .nqhomeprice }}</td>
-          <td>{{ .nqmargin }}</td>
-          <td>{{ .stacksize }}</td>
-          <td>{{ .totalmargin }}</td>
-          <td>{{ .timezone }}</td>
-        </tr>
-        {{end}}
-      </tbody>
-    </table>
-    {{ else }}
-      <p>No Normal Quality items meet the criteria</p>
-    {{ end }}
-
-    <h1>High Quality</h1>
-    {{ if .HQData}}
-    <table class="GeneratedTable">
-      <thead>
-        <tr>
-          <th>id</th>
-          <th>Name</th>
-          <th>World Name</th>
-          <th>Datacenter</th>
-          <th>Sale Velocity</th>
-          <th>Price</th>
-          <th>Home Price</th>
-          <th>Margin</th>
-          <th>Stack Size</th>
-          <th>Total Margin</th>
-          <th>Last Updated</th>
-        </tr>
-      </thead>
-      <tbody>
-        {{ range .HQData }}
-        <tr>
-          <td>{{ .id }}</td>
-          <td>
-            <a href="https://universalis.app/market/{{ .id }}">{{ .name }}</a>
-          </td>
-          <td>{{ .hqworldname }}</td>
-          <td>{{ .hqdc }}</td>
-          <td>{{ .hqsalevelocity }}</td>
-          <td>{{ .hqprice }}</td>
-          <td>{{ .hqhomeprice }}</td>
-          <td>{{ .hqmargin }}</td>
-          <td>{{ .stacksize }}</td>
-          <td>{{ .totalmargin }}</td>
-          <td>{{ .timezone }}</td>
-        </tr>
-        {{end}}
-    {{ else }}
-      <p>No High Quality items meet the criteria</p>
-    {{ end }}
-      </tbody>
-    </table>
-
+    <!-- <h1>Normal Quality</h1> -->
+    <!-- {{ if .NQData}} -->
+    <!-- <table class="GeneratedTable"> -->
+    <!--   <thead> -->
+    <!--     <tr> -->
+    <!--       <th>id</th> -->
+    <!--       <th>Name</th> -->
+    <!--       <th>World Name</th> -->
+    <!--       <th>Datacenter</th> -->
+    <!--       <th>Sale Velocity</th> -->
+    <!--       <th>Price</th> -->
+    <!--       <th>Home Price</th> -->
+    <!--       <th>Margin</th> -->
+    <!--       <th>Stack Size</th> -->
+    <!--       <th>Total Margin</th> -->
+    <!--       <th>Last Updated</th> -->
+    <!--     </tr> -->
+    <!--   </thead> -->
+    <!--   <tbody> -->
+    <!--     {{ range .NQData }} -->
+    <!--     <tr> -->
+    <!--       <td>{{ .id }}</td> -->
+    <!--       <td> -->
+    <!--         <a href="https://universalis.app/market/{{ .id }}">{{ .name }}</a> -->
+    <!--       </td> -->
+    <!--       <td>{{ .nqworldname }}</td> -->
+    <!--       <td>{{ .nqdc }}</td> -->
+    <!--       <td>{{ .nqsalevelocity }}</td> -->
+    <!--       <td>{{ .nqprice }}</td> -->
+    <!--       <td>{{ .nqhomeprice }}</td> -->
+    <!--       <td>{{ .nqmargin }}</td> -->
+    <!--       <td>{{ .stacksize }}</td> -->
+    <!--       <td>{{ .totalmargin }}</td> -->
+    <!--       <td>{{ .timezone }}</td> -->
+    <!--     </tr> -->
+    <!--     {{end}} -->
+    <!--   </tbody> -->
+    <!-- </table> -->
+    <!-- {{ else }} -->
+    <!--   <p>No Normal Quality items meet the criteria</p> -->
+    <!-- {{ end }} -->
+    <!---->
+    <!-- <h1>High Quality</h1> -->
+    <!-- {{ if .HQData}} -->
+    <!-- <table class="GeneratedTable"> -->
+    <!--   <thead> -->
+    <!--     <tr> -->
+    <!--       <th>id</th> -->
+    <!--       <th>Name</th> -->
+    <!--       <th>World Name</th> -->
+    <!--       <th>Datacenter</th> -->
+    <!--       <th>Sale Velocity</th> -->
+    <!--       <th>Price</th> -->
+    <!--       <th>Home Price</th> -->
+    <!--       <th>Margin</th> -->
+    <!--       <th>Stack Size</th> -->
+    <!--       <th>Total Margin</th> -->
+    <!--       <th>Last Updated</th> -->
+    <!--     </tr> -->
+    <!--   </thead> -->
+    <!--   <tbody> -->
+    <!--     {{ range .HQData }} -->
+    <!--     <tr> -->
+    <!--       <td>{{ .id }}</td> -->
+    <!--       <td> -->
+    <!--         <a href="https://universalis.app/market/{{ .id }}">{{ .name }}</a> -->
+    <!--       </td> -->
+    <!--       <td>{{ .hqworldname }}</td> -->
+    <!--       <td>{{ .hqdc }}</td> -->
+    <!--       <td>{{ .hqsalevelocity }}</td> -->
+    <!--       <td>{{ .hqprice }}</td> -->
+    <!--       <td>{{ .hqhomeprice }}</td> -->
+    <!--       <td>{{ .hqmargin }}</td> -->
+    <!--       <td>{{ .stacksize }}</td> -->
+    <!--       <td>{{ .totalmargin }}</td> -->
+    <!--       <td>{{ .timezone }}</td> -->
+    <!--     </tr> -->
+    <!--     {{end}} -->
+    <!-- {{ else }} -->
+    <!--   <p>No High Quality items meet the criteria</p> -->
+    <!-- {{ end }} -->
+    <!--   </tbody> -->
+    <!-- </table> -->
+    <!---->
   </body>
 </html>
